k8s/namespaces/monitoring/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-grafana-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
      services:
        - name: grafana
          port: 80
  tls: 
    secretName: oglesby-io-tls
